# warship

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFMOD.cmake  FindFMODL.cmake
include/Warship/: Warship.hpp
src/: Shipcore.cpp  Warship.cpp  Warship.h  main.cpp
test/: main.cpp
warship/: AudioManager.h  Engine.cpp  Engine.h  SimpleAudioManager.h  WarChannel.h  WarSound.h  libfmodL.dylib  main.cpp
warship.xcodeproj/: project.pbxproj
warship.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
warship.xcodeproj/project.xcworkspace/xcuserdata/Nerrons.xcuserdatad/: UserInterfaceState (Depbrexxt's conflicted copy 2018-12-08).xcuserstate
warship.xcodeproj/xcuserdata/Nerrons.xcuserdatad/xcschemes/: xcschememanagement.plist
warship/Frameworks/: libfmodstudioL.dylib
